clase-7-teracloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-app
spec:
  selector:
    app: ha-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
